fix the z-index for sub-nav-menu in homepage

--- a/webapp/src/styles/screen.scss
+++ b/webapp/src/styles/screen.scss
@@ -725,7 +725,7 @@ ul {
   left: 0;
   bottom: 0;
   right: 0;
-  z-index: 9998;
+  //z-index: 9998;
 
   & > div {
     display: table;
@@ -792,6 +792,8 @@ ul {
   background: black;
   position: fixed;
   bottom: 0px;
+  z-index: 9999;
+
 
   .top-bar {
     height: 60px;
